journal title wrap fix

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -103,6 +103,7 @@
     #emailBody .journal-suggestion h2{
         font-size:1.3em;
         margin-bottom:15px;
+        max-width: 515px;
     }
     #emailBody .society-line{
         margin:0;
